--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,42 +1,36 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+body{
+  margin: 0;
+  padding: 0;
+  /* -----------------Main background for all webpages------------- */
+  background-color: rgb(200, 180, 150)    
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+/* ------------------------------Start of NavBar Styling---------------------- */
+.navbarContainer {
+  padding: 0.5em;
+  font-size: 2em;
+  display: flex;
+  justify-content: space-between;
+  background-color: rgb(90, 77, 65);
+  color: rgb(245, 245, 220);
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.navbarContainer a {
+height: 100%;
+color: rgb(245, 245, 220);
+text-decoration: none;
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.navbarTitle{
+height: 100%;
+color: rgb(255, 99, 71);
+text-align: center;
 }
+/* -----------------------------------End of NavBar Styling-------------------------- */
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* -----------------------------------login/logout/Signup btn Component */
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.logBtn{
+  height: 100%;
+  background-color: transparent;
+  color: rgb(245, 245, 220);
+  text-decoration: none;
 }
