--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -38,7 +38,33 @@ text-align: center;
   align-items: center;
   margin: 2rem auto 0 auto;
 }
-/* -----------------------login Form */
+  /* -----------------------Logged In Options */
+  .loggedInOptionsContainer{
+    border: solid red;
+
+    height: 30%;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .loggedInTitle{
+    color: rgb(191, 29, 0);
+  }
+  .loggedInLogoutBtn{
+    font-size: xx-large;
+    border-radius: 30px;
+    padding: 0.5em;
+    background-color: rgb(90, 77, 65);
+    color: rgb(255, 99, 71);
+    transition: transform 0.1s ease-in-out;
+  }
+    /* For button click, to show it's being pressed */
+  .loggedInLogoutBtn:active {
+  transform: scale(0.95);
+  }
+
+  /* -----------------------login Form */
 .loginContainer{
   margin: 1rem auto;
   height: 50%;
@@ -77,7 +103,7 @@ text-align: center;
   font-size: large;
   text-align: center;
 }
-/* ---------------------Signup form */
+  /* ---------------------Signup form */
 .signupContainer{
   margin: 1rem auto;
   height: 50%;
