Fix/Add; add POST form for user created items -->
And fix error in uItemController that was causing POST to not go through
when using the form.  Now users can create new items as long as they are
signed in.  And the items are tied to their account.

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -153,4 +153,15 @@ text-align: center;
   font-size: large;
   text-align: center;
 }
-/* ---------------------------------End of login/Signup page */
+/* ---------------------------------End of login/Signup page---------- */
+
+/* -----------------------------------------------------------------Start of Create5E page styling */
+
+
+/* ---------------------------------End of Create5E page styling------- */
+
+/* -----------------------------------------------------------------Start of UsersContent page styling */
+
+
+/* ---------------------------------End of UsersContent page styling------- */
+
