Add; CRUD Functionality for user created items
Users can now Create, Read, Update, and Delete items that they created
while signed into their own account

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -165,3 +165,9 @@ text-align: center;
 
 /* ---------------------------------End of UsersContent page styling------- */
 
+/* ----------------------------------------------------- Start of Carousel and buttons styling */
+
+
+
+/* -----------------------------End of Carousel/Button styling-------------- */
+
