--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -59,7 +59,7 @@ text-align: center;
   flex-flow: column;
   align-items: center;
   justify-content: space-between;
-  background-image: url(./loggedInBackground.webp);
+  background-image: url(/assets/loggedInBackground.webp);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -93,7 +93,7 @@ text-align: center;
 .loginContainer{
   width: 100%;
   height: 50%;
-  background-image: url(./loginBackground.webp);
+  background-image: url(/assets/loginBackground.webp);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -123,7 +123,7 @@ text-align: center;
   width: 100%;
   height: 50%;
   /* padding: 2rem; */
-  background-image: url(./signUpBackground.webp);
+  background-image: url(/assets/signUpBackground.webp);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -193,7 +193,7 @@ text-align: center;
   padding: 3rem 0;
   font-size: xx-large;
   text-align: center;
-  background-image: url(./greenPoison.gif);
+  background-image: url(/assets/greenPoison.gif);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -202,7 +202,7 @@ text-align: center;
   padding: 3rem 0;
   font-size: xx-large;
   text-align: center;
-  background-image: url(./greenPoison.gif);
+  background-image: url(/assets/greenPoison.gif);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -211,7 +211,7 @@ text-align: center;
   padding: 3rem 0;
   font-size: xx-large;
   text-align: center;
-  background-image: url(./greenPoison.gif);
+  background-image: url(/assets/greenPoison.gif);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -225,7 +225,7 @@ text-align: center;
   flex-flow: column;
   align-items: center;
   justify-content: space-around;
-  background-image: url(./create5EBackground.webp);
+  background-image: url(/assets/create5EBackground.webp);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -244,7 +244,7 @@ text-align: center;
   border: solid black;
   width: 40%;
   height: 80%;
-  background-image: url(./createFormBackground.webp);
+  background-image: url(/assets/createFormBackground.webp);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
